--- a/index.html
+++ b/index.html
@@ -3,10 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,700;0,800;1,400&display=swap"
+      rel="stylesheet"
+    />
     <title>Samiul Islam's Portfolio</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav class="navbar">
+        <h3 class="nav-heading">Ma<span class="text-primary">r</span>y</h3>
+        <ul class="menu">
+          <li><a href="#"></a>Portfolio</li>
+          <li><a href="#"></a>Blog</li>
+          <li><button class="btn">Hire me</button></li>
+        </ul>
+      </nav>
+    </header>
     <main></main>
     <footer></footer>
   </body>
