--- a/index.html
+++ b/index.html
@@ -19,9 +19,28 @@
         <ul class="menu">
           <li><a href="#"></a>Portfolio</li>
           <li><a href="#"></a>Blog</li>
-          <li><button class="btn">Hire me</button></li>
+          <li><button class="btn-primary">Hire me</button></li>
         </ul>
       </nav>
+      <div class="banner">
+        <div class="banner-content">
+          <h3 class="banner-greeting">Hi, I am</h3>
+          <h1 class="person-name">Mary Hardy</h1>
+          <p class="person-info">
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </p>
+          <div class="button-group">
+            <button class="btn-primary">Download CV</button>
+            <button class="btn-primary">Contact</button>
+          </div>
+        </div>
+        <img
+          class="profile-picture"
+          src="images/1699492_P3OLGJ1 1.png"
+          alt="profile picture"
+        />
+      </div>
     </header>
     <main></main>
     <footer></footer>
