--- a/index.html
+++ b/index.html
@@ -42,7 +42,99 @@
         />
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="about">
+        <h3 class="section-title">About Me</h3>
+        <p class="section-description">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
+        </p>
+        <div class="about-infos">
+          <div class="about-info">
+            <div class="title">Name:</div>
+            <div class="title-value">Mary Hardy</div>
+          </div>
+          <div class="about-info">
+            <div class="title">Email:</div>
+            <div class="title-value">info@gmail.com</div>
+          </div>
+          <div class="about-info">
+            <div class="title">Date of birth:</div>
+            <div class="title-value">November 1987</div>
+          </div>
+          <div class="about-info">
+            <div class="title">From:</div>
+            <div class="title-value">Los Angles, USA</div>
+          </div>
+        </div>
+      </section>
+      <section class="what-i-do">
+        <h3 class="section-title">What I do</h3>
+        <p class="section-description">
+          I have more than 10 years experience building software for clients all
+          over the world. Below is a quick overview of my main technical skill
+          sets and technologies i use. Want to find out more about my
+          experience? Check out my online resume and project portfolio.
+        </p>
+        <div class="skills">
+          <div class="skill">
+            <img
+              src="images/logo-javascript 1.png"
+              alt="javascript logo-javascript"
+              class="skill-img"
+            />
+            <h4 class="skill-title">Vanila Javascript</h4>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img
+              src="images/react.png"
+              alt="javascript logo-javascript"
+              class="skill-img"
+            />
+            <h4 class="skill-title">React</h4>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img
+              src="images/nodejs-icon 1.png"
+              alt="javascript logo-javascript"
+              class="skill-img"
+            />
+            <h4 class="skill-title">Node</h4>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img
+              src="images/mongo 1.png"
+              alt="javascript logo-javascript"
+              class="skill-img"
+            />
+            <h4 class="skill-title">MongoDB</h4>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
