--- a/index.html
+++ b/index.html
@@ -134,6 +134,74 @@
           </div>
         </div>
       </section>
+      <section class="summary">
+        <h3 class="section-title">A summary of My Resume</h3>
+        <div class="contents">
+          <div class="my-education">
+            <h4 class="content-title">My Education</h4>
+            <div class="education">
+              <h4 class="education-title">Master in Computer Engineering</h4>
+              <h5 class="university">Harvard University / 2015 - 2017</h5>
+              <p class="edu-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="education border-top-bottom">
+              <h4 class="education-title">Master in Computer Engineering</h4>
+              <h5 class="university">Harvard University / 2015 - 2017</h5>
+              <p class="edu-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="education">
+              <h4 class="education-title">Master in Computer Engineering</h4>
+              <h5 class="university">Harvard University / 2015 - 2017</h5>
+              <p class="edu-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+          <div class="my-experience">
+            <h4 class="content-title">My Experience</h4>
+            <div class="education">
+              <h4 class="education-title">Sr. Font End Developer</h4>
+              <h5 class="university">Apple Inc / 2020 - Current</h5>
+              <p class="edu-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="education border-top-bottom">
+              <h4 class="education-title">Jr. Font End Developer</h4>
+              <h5 class="university">Dribbble Inc / 2018 - 2022</h5>
+              <p class="edu-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="education">
+              <h4 class="education-title">HTML Developer</h4>
+              <h5 class="university">Adobe Inc / 2017 - 2018</h5>
+              <p class="edu-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="btn-container">
+          <button class="btn-primary summary-btn">Download CV</button>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
