--- a/index.html
+++ b/index.html
@@ -203,6 +203,30 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <div class="footer-column">
+        <h2 class="footer-heading">Let's contact</h2>
+        <p class="footer-description">
+          Please fill out the form on this section to contact with me or call
+          between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+        </p>
+        <div class="social-links">
+          <a href=""><img src="images/facebook.png" alt="facebook" /></a>
+          <a href=""><img src="images/tweeter.png" alt="tweeter" /></a>
+          <a href=""><img src="images/insta.png" alt="instagram" /></a>
+        </div>
+      </div>
+      <div class="footer-column">
+        <div class="contact-form">
+          <h2 class="footer-heading">Let's message me</h2>
+          <form class="contact-form">
+            <input placeholder="Your Name" type="text" />
+            <input placeholder="Your Email" type="email" />
+            <textarea placeholder="Message" rows="10"></textarea>
+            <input class="btn-primary" type="submit" value="Submit" />
+          </form>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
